# git-herd

./: .gitignore  README.md  install.sh  pyproject.toml
src/git_herd/: __init__.py  __main__.py  cli.py  formatting.py  git.py  models.py  runner.py  scanner.py
tests/: test_formatting.py  test_scanner.py
